add: opiniones oficiales

--- a/index.html
+++ b/index.html
@@ -596,66 +596,56 @@
             <div class="opiniones-carrusel">
                 <button class="opiniones-arrow left" aria-label="Anterior">&#8592;</button>
                 <div class="opiniones-slide active">
-                    <p class="opinion-text"><span class="comillas">"</span>Superaron nuestras expectativas; el proyecto
-                        se completó a tiempo y con una calidad excepcional. ¡Absolutamente recomendados!<span
-                            class="comillas">"</span></p>
+                    <p class="opinion-text">Superaron nuestras expectativas; el proyecto
+                        se completó a tiempo y con una calidad excepcional. ¡Absolutamente recomendados!</p>
                     <img class="opinion-avatar" src="Imagenes/Perfiles/perfil1.webp" alt="Foto de perfil">
                     <span class="opinion-author">- Juan Pérez</span>
                     <span class="opinion-cargo">- Ingeniero Civil</span>
 
                 </div>
                 <div class="opiniones-slide">
-                    <p class="opinion-text"><span class="comillas">"</span>Desde la planificación hasta la entrega, su
-                        equipo mostró una profesionalidad increíble y una atención al detalle impecable.<span
-                            class="comillas">"</span></p>
+                    <p class="opinion-text">"He laborado para esta gran empresa desde 2013 y he visto cómo ha ido evolucionando y creciendo laboralmente.
+De mi parte, como trabajador, he estado en las buenas y en las malas, porque así como hay días buenos, los hay malos. Anteriormente solo estábamos en el estado de Chiapas, pero ahora nos estamos expandiendo más. Gracias al trabajo, he conocido gran parte de la República Mexicana y también parte de Centroamérica. ¡Espero que, como empresa, sigamos expandiéndonos a diferentes partes de la República Mexicana y más allá!"</p>
                     <img class="opinion-avatar" src="Imagenes/Perfiles/perfil2.webp" alt="Foto de perfil">
-                    <span class="opinion-author">- María López</span>
-                    <span class="opinion-cargo">- Ingeniera en Sistemas</span>
+                    <span class="opinion-author">- Jose Martin Tetumo</span>
+                    <span class="opinion-cargo">- Gerente de maquinaria </span>
 
                 </div>
                 <div class="opiniones-slide">
-                    <p class="opinion-text"><span class="comillas">"</span>Transformaron nuestra visión en realidad sin
-                        ningún estrés. La comunicación fue constante y el resultado final, perfecto.<span
-                            class="comillas">"</span></p>
+                    <p class="opinion-text">"Trabajar en The Fuentes ha sido una experiencia enriquecedora tanto a nivel profesional como personal. La empresa ofrece un ambiente de trabajo colaborativo con oportunidades de crecimiento y aprendizaje constante. Sin embargo, también enfrentamos retos como mejorar la comunicación interna y toma de decisiones. Considero este un lugar donde se puede construir una carrera sólida."</p>
                     <img class="opinion-avatar" src="Imagenes/Perfiles/perfil3.webp" alt="Foto de perfil">
-                    <span class="opinion-author">- Carlos Ramírez</span>
-                    <span class="opinion-cargo">- Arquitecto</span>
+                    <span class="opinion-author">- Maria del Carmen Estrada</span>
+                    <span class="opinion-cargo">- Encargada de estimaciones de obra</span>
 
                 </div>
                 <div class="opiniones-slide">
-                    <p class="opinion-text"><span class="comillas">"</span>Transformaron nuestra visión en realidad sin
-                        ningún estrés. La comunicación fue constante y el resultado final, perfecto.<span
-                            class="comillas">"</span></p>
+                    <p class="opinion-text">Transformaron nuestra visión en realidad sin
+                        ningún estrés. La comunicación fue constante y el resultado final, perfecto.</p>
                     <img class="opinion-avatar" src="Imagenes/Perfiles/perfil4.webp" alt="Foto de perfil">
                     <span class="opinion-author">- Carlos Ramírez</span>
                     <span class="opinion-cargo">- Arquitecto</span>
 
                 </div>
                 <div class="opiniones-slide">
-                    <p class="opinion-text"><span class="comillas">"</span>Transformaron nuestra visión en realidad sin
-                        ningún estrés. La comunicación fue constante y el resultado final, perfecto.<span
-                            class="comillas">"</span></p>
+                    <p class="opinion-text">Transformaron nuestra visión en realidad sin
+                        ningún estrés. La comunicación fue constante y el resultado final, perfecto.</p>
                     <img class="opinion-avatar" src="Imagenes/Perfiles/perfil5.webp" alt="Foto de perfil">
                     <span class="opinion-author">- Carlos Ramírez</span>
                     <span class="opinion-cargo">- Arquitecto</span>
 
                 </div>
                 <div class="opiniones-slide">
-                    <p class="opinion-text"><span class="comillas">"</span>Transformaron nuestra visión en realidad sin
-                        ningún estrés. La comunicación fue constante y el resultado final, perfecto.<span
-                            class="comillas">"</span></p>
+                    <p class="opinion-text">"Es una empresa que apoya el talento joven, con capacitaciones y enseñanza diaria, sobrepasando siempre los retos que se presentan y sobre todo siempre viendo hacia el futuro. Como toda empresa, ha tenido sus altibajos, pero hoy en día se podría decir que es una empresa sólida que está en expansión y que se tienen buenos proyectos, con la mira de seguir creciendo mucho más."</p>
                     <img class="opinion-avatar" src="Imagenes/Perfiles/perfil6.webp" alt="Foto de perfil">
-                    <span class="opinion-author">- Carlos Ramírez</span>
-                    <span class="opinion-cargo">- Arquitecto</span>
+                    <span class="opinion-author">- Mauro Sanchez</span>
+                    <span class="opinion-cargo">- Gerente de Recursos Humanos</span>
 
                 </div>
                 <div class="opiniones-slide">
-                    <p class="opinion-text"><span class="comillas">"</span>Transformaron nuestra visión en realidad sin
-                        ningún estrés. La comunicación fue constante y el resultado final, perfecto.<span
-                            class="comillas">"</span></p>
+                    <p class="opinion-text">Una empresa que me ha dado mucho crecimiento profesional, muchas oportunidades de aprender cosas nuevas.</p>
                     <img class="opinion-avatar" src="Imagenes/extras/toychiquito.jpg" alt="Foto de perfil">
-                    <span class="opinion-author">- Carlos Ramírez</span>
-                    <span class="opinion-cargo">- Arquitecto</span>
+                    <span class="opinion-author">- Jonny Daniel Xolo</span>
+                    <span class="opinion-cargo">- Analista de Costos</span>
 
                 </div>
                 <button class="opiniones-arrow right" aria-label="Siguiente">&#8594;</button>
