--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="nav-item"><a href="#servicios" class="nav-link">Servicios</a></li>
                 <li class="nav-item"><a href="#proyectos" class="nav-link">Proyectos</a></li>
                 <div class="sidebar-auth ms-3">
-                    <button href="#contacto" class="btn contactanos">Contáctanos</button>
+                    <a href="#contacto" class="btn contactanos">Contáctanos</a>
                     <button class="btn sign-in">Iniciar Sesión</button>
                 </div>
             </ul>
@@ -41,7 +41,7 @@
     <aside class="sidebar" id="sidebar">
         <div class="sidebar-header d-flex justify-content-between align-items-center p-3">
             <a href="/" class="d-flex align-items-center text-decoration-none">
-                <img src="Imagenes/LogoHB.png" alt="The Fuentes Corp Logo" width="120" height="auto">
+                <img src="Imagenes/Logos/LogoHB.png" alt="The Fuentes Corp Logo" width="120" height="auto">
             </a>
             <button class="close-sidebar" id="closeSidebar">&times;</button>
         </div>
