fix: path images:

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <div class="space"></div>
         <section class="mision-vision-section">
             <p class="misionvision-title">Peldaño por peldaño</p>
-            <div class="container-mision">
+            <div class="container-mision" style="background-image: url('Imagenes/extras/mision.png');">
                 <div class="div-mision">
                     <h1 class="mision-title">Misión</h1>
                 </div>
@@ -412,7 +412,7 @@
                     </p>
                 </div>
             </div>
-            <div class="container-vision">
+            <div class="container-vision" style="background-image: url('Imagenes/extras/mision.png');">
                 <div class="div-vision">
                     <h1 class="vision-title">Visión</h1>
                 </div>
