fix: path footer image

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     </p>
                 </div>
             </div>
-            <div class="container-vision" style="background-image: url('Imagenes/extras/mision.png');">
+            <div class="container-vision" style="background-image: url('Imagenes/extras/vision.jpg');">
                 <div class="div-vision">
                     <h1 class="vision-title">Visión</h1>
                 </div>
@@ -1048,7 +1048,7 @@
         </script>
     </main>
     <div class="container-footer">
-        <footer class="footer">
+        <footer class="footer" styles="background-image: url('/Imagenes/lasFlores/img1.jpeg');">
             <div class="logo-container">
                 <img src="Imagenes/Logos/LogoVerticalWhite.png" alt="The Fuentes Corp Logo" class="logo-footer">
                 <h3><strong>Direccion:</strong></h3>
