fix: footer details

--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
         </script>
     </main>
     <div class="container-footer">
-        <footer class="footer" style="background-image: url('/Imagenes/lasFlores/img1.jpeg');">
+        <footer class="footer">
             <div class="logo-container">
                 <img src="Imagenes/Logos/LogoVerticalWhite.png" alt="The Fuentes Corp Logo" class="logo-footer">
                 <h3><strong>Direccion:</strong></h3>
