fix: footer path image:

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                     <img src="Imagenes/plantaAsfalto/img1.jpeg" alt="Planta de asfalto moderna">
                 </div>
                 <div class="planta-item planta-imagen-2 animate-image-fadeInRight">
-                    <img src="Imagenes/plantaAsfalto/img2.jpeg" alt="Proceso de producción de asfalto">
+                    <img src="Imagenes/plantaAsfalto/planta.jpeg" alt="Proceso de producción de asfalto">
                 </div>
                 <div class="planta-item planta-texto">
                     <p class="planta-text animate-zoom">Desde nuestra planta, <strong>suministramos asfalto con la
@@ -1052,7 +1052,7 @@
             <div class="logo-container">
                 <img src="Imagenes/Logos/LogoVerticalWhite.png" alt="The Fuentes Corp Logo" class="logo-footer">
                 <h3><strong>Direccion:</strong></h3>
-                <h4>Av. Chpultepec, Edifico 1385, 3A Piso. Privadas del Pedregal, San Luis Potosi</h4>
+                <h4>Avenida Parque Chapultepec 1385, Piso 3, Privadas del Pedregal, San Luis Potosí CP 78295</h4>
                 <h3><strong>Email:</strong></h3>
                 <h4>direccion@thefuentescorp.com.mx</h4>
             </div>
