modify: about section

--- a/index.html
+++ b/index.html
@@ -69,22 +69,21 @@
         </section>
         <section class="about-minimal" id="nosotros">
             <div class="about-text">
-                <h2 class="about-title"><span class="big-title">Más</span> que una <br><span
-                        class="big-title">Constructora</span></h2>
+                <h2 class="about-title"><span class="big-title"> Más que una Constructora</span></h2>
                 <h3 class="about-subtitle">Nuestro Compromiso</h3>
                 <p class="about-paragraph">
-                    En The Fuentes Corporation, construimos más que infraestructuras: construimos <b>relaciones</b>,
-                    <i>innovación</i> y <b>valor humano</b>. Nuestro eslogan, “Creciendo Juntos”, refleja nuestro
-                    compromiso de avanzar junto a nuestros <i>clientes</i> y <b>colaboradores</b>, optimizando cada
-                    recurso para ofrecer la <b>máxima calidad</b> a un <i>costo eficiente</i>. Creemos en el <b>poder de
-                        las personas</b>, y fomentamos un entorno donde cada miembro de nuestro equipo puede
-                    <i>crecer</i> y contribuir al <b>éxito colectivo</b>. Juntos, implementamos <i>técnicas
-                        vanguardistas</i> que no solo nos mantienen a la vanguardia de la industria, sino que también
-                    nos permiten crear <b>soluciones sostenibles y eficientes</b>.
-                </p>
+    <strong>The Fuentes Corporation</strong> fue fundada el <em>17 de julio de 2008</em> en <strong>Tuxtla Gutiérrez, Chiapas</strong>, como una empresa especializada en la <em>construcción de obras públicas y privadas</em>. Desde sus inicios, ha mantenido un compromiso con la <strong>calidad</strong>, la <strong>seguridad</strong> y la <em>generación de empleo</em>.
+    En 2014, la compañía vivió una <em>etapa de renovación</em> con la incorporación del <strong>ingeniero Juan Pablo</strong>, lo que marcó un punto de inflexión en su crecimiento. Bajo su liderazgo, la empresa tomó un nuevo impulso, guiada por una <strong>visión de excelencia operativa</strong> y la <em>expansión regional</em>.
+    Durante esos primeros años, <em>The Fuentes Corporation</em> ejecutó <strong>obras de menor escala</strong> en Chiapas, consolidando su <em>reputación</em> y <strong>experiencia en el sector</strong>.
+    Ese mismo año se estableció la <strong>primera sucursal en Chiapas</strong>, coordinando <em>proyectos locales y regionales</em>.
+    En <strong>2019</strong>, comenzó su <em>expansión internacional</em> con una sucursal en <strong>El Salvador</strong> y, en <strong>2023</strong>, abrió una sede en <strong>San Luis Potosí</strong>, desarrollando <em>proyectos de mayor escala y complejidad</em>.
+    Con más de <strong>16 años de trayectoria</strong>, <strong>The Fuentes Corporation</strong> se posiciona como una <em>empresa sólida</em>, en <strong>constante crecimiento</strong>, con presencia en el <em>sureste y centro de México</em> y <strong>Centroamérica</strong>.
+</p>
+
+
             </div>
             <div class="about-image">
-                <img src="Imagenes/extras/equipo.jpg" alt="Sobre nosotros" />
+                <img src="Imagenes/extras/equipo2.png" alt="Sobre nosotros" />
             </div>
         </section>
         <div class="space"></div>
@@ -181,7 +180,7 @@
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div>
-                                            <h4 class="card-title">Pendiente</h4>
+                                            <h4 class="card-title">Plaza Electra</h4>
                                             <h6 class="card-subtitle">Diseño Web</h6>
                                         </div>
                                         <div class="d-flex justify-content-between align-items-center">
@@ -709,7 +708,7 @@
                         nombre: "Jose Martin Tetumo",
                         titulo: "Gerente de maquinaria",
                         opinion: "Llevo laborando para esta gran empresa desde el 2013 y he visto cómo va evolucionando y creciendo laboralmente. De mi parte, como trabajador, he estado en las buenas y en las malas, porque así como hay días buenos, ¡los hay malos!. ¡Espero que, como empresa, se siga expandiendo más a diferentes partes de la República Mexicana!",
-                        img: "https://randomuser.me/api/portraits/women/44.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "medium",
                         highlight: true
                     },
@@ -718,7 +717,7 @@
                         nombre: "Mauro Alberto Ramos",
                         titulo: "Gerente de Sistemas",
                         opinion: "En el tiempo que he trabajado en The Fuentes Corporation, me ha sido grato laborar en la empresa. He podido crecer profesionalmente basándome en proyectos y nuevos retos que se presentan en el día a día.",
-                        img: "https://randomuser.me/api/portraits/men/28.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "large"
                     },
                     {
@@ -726,7 +725,7 @@
                         nombre: "Mauro Sánchez López",
                         titulo: "Gerente de Recursos Humanos",
                         opinion: "Es una empresa que apoya el talento joven, con capacitaciones y enseñanza diaria, sobrepasando siempre los retos que se presentan y sobre todo siempre viendo hacia el futuro. Como toda empresa ha tenido sus altibajos, pero hoy en día se podría decir que es una empresa sólida que está en expansión y que tiene buenos proyectos, con la mira de seguir creciendo mucho más.",
-                        img: "https://randomuser.me/api/portraits/women/68.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "medium",
                         highlight: true
                     },
@@ -735,7 +734,7 @@
                         nombre: "Luis Enrique Sanchez",
                         titulo: "Jefe de producción plantas de asfalto",
                         opinion: "Ha sido un constante aprendizaje a lo largo de estos meses en los que he desempeñado actividades en esta área por lo que puedo decir ha sido una gran experiencia laboral.",
-                        img: "https://randomuser.me/api/portraits/women/56.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "large"
                     },
                     {
@@ -743,7 +742,7 @@
                         nombre: "Thalía Arcelia Huerta",
                         titulo: "Auxiliar de calidad",
                         opinion: "El trato hacia mi persona siempre a sido excelente, siempre me han apoyado en dudas, económicamente y en cursos. Les estoy muy agraciada por la oportunidad. Considero que tiene muchas áreas de mejora y crecimiento, que con el apoyo ideal favorecerían mucho a la mejora continua ",
-                        img: "https://randomuser.me/api/portraits/women/63.jpg",
+                        img: "Imagenes/icons/perfil2.png",
                         size: "medium"
                     },
                     {
@@ -751,7 +750,7 @@
                         nombre: "Jose Socorro Roque",
                         titulo: "Cliente corporativo",
                         opinion: "Por el tiempo que llevo trabajando en esta empresa, me ha gustado el trabajo. Son puntuales en los pagos y hay buen ambiente laboral. La recomiendo para trabajar.",
-                        img: "https://randomuser.me/api/portraits/men/81.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "large"
                     },
                     {
@@ -759,7 +758,7 @@
                         nombre: "María del Carmen García",
                         titulo: "Encargada de Estimaciones de Obra",
                         opinion: "Trabajar en The Fuentes ha sido una experiencia enriquecedora tanto a nivel profesional como personal. La empresa ofrece un ambiente de trabajo colaborativo con oportunidades de crecimiento y aprendizaje constante. Sin embargo, también enfrentamos retos como mejorar la comunicación interna y la toma de decisiones. Considero este un lugar donde se puede construir una carrera sólida.",
-                        img: "https://randomuser.me/api/portraits/men/75.jpg",
+                        img: "Imagenes/icons/perfil2.png",
                         size: "medium"
                     },
                     {
@@ -767,7 +766,7 @@
                         nombre: "Carlos Jonathan Zavaleta",
                         titulo: "Residente",
                         opinion: "Todo muy bien, buen ambiente laboral. Los gerentes apoyan mucho a todo el equipo de trabajo. Los campamentos están excelentes con excelentes servicios.",
-                        img: "https://randomuser.me/api/portraits/women/25.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "large",
                         highlight: true
                     },
@@ -776,7 +775,7 @@
                         nombre: "Carrillo Cruz",
                         titulo: "Auxiliar Administrativo",
                         opinion: "Me siento bien en esta empresa, donde hay crecimiento profesional y cada día se presenta un reto en el que puedes aprender más y aportar ideas. Siempre se aprende algo nuevo, tanto de cada trabajador como de los compañeros. Es una empresa que te da la oportunidad de aprender más de lo poco que sabes.",
-                        img: "https://randomuser.me/api/portraits/women/50.jpg",
+                        img: "Imagenes/icons/perfil2.png",
                         size: "medium"
                     },
                     {
@@ -784,7 +783,7 @@
                         nombre: "Juan Eduardo Loredo",
                         titulo: "Velador",
                         opinion: "Ha sido muy buena, sin ningún problema. Hasta ahora no he tenido problemas con ningún miembro de la compañía. Me ha gustado mucho ser miembro del equipo.",
-                        img: "https://randomuser.me/api/portraits/women/47.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "large"
                     },
                     {
@@ -792,7 +791,7 @@
                         nombre: "Wilfredo Argueta",
                         titulo: "Gerente Administrativo",
                         opinion: "La empresa ha tenido varios cambios desde que entré a laborar. Se han mejorado temas como los controles de insumos, comodidades en los campamentos, entre otros.",
-                        img: "https://randomuser.me/api/portraits/women/33.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "large",
                         highlight: true
                     },
@@ -801,7 +800,7 @@
                         nombre: "Ricardo Linares",
                         titulo: "Gerente de Obra",
                         opinion: "La razón de ser líder conlleva una responsabilidad mayor. Es necesario predicar con el ejemplo y aplicar el conocimiento en las tareas programadas en la obra que se tiene a cargo. El deber ser es que las acciones laborales hablen por ti y te ayuden a crecer en tu vida laboral, agradeciendo siempre a la empresa por la oportunidad laboral hasta el momento.",
-                        img: "https://randomuser.me/api/portraits/men/43.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "medium"
                     },
                     {
@@ -809,7 +808,7 @@
                         nombre: "Maria De Jesus Ramos",
                         titulo: "Auxiliar de Estimaciones",
                         opinion: "Ha sido una experiencia agradable, ya que tenemos excelentes ingenieros de los cuales aprendemos más y contamos con un ambiente de trabajo agradable. Estamos en una buena empresa.",
-                        img: "https://randomuser.me/api/portraits/women/29.jpg",
+                        img: "Imagenes/icons/perfil2.png",
                         size: "large"
                     },
                     {
@@ -817,7 +816,7 @@
                         nombre: "Jonny Daniel Xolo",
                         titulo: "Analista de costos",
                         opinion: "Una empresa que me ha dado mucho crecimiento profesional, muchas oportunidades de aprender cosas nuevas.",
-                        img: "https://randomuser.me/api/portraits/men/32.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "large"
                     },
                     {
@@ -825,7 +824,7 @@
                         nombre: "Luz Elena Pérez",
                         titulo: "Auxiliar Recursos Humanos",
                         opinion: "En mi experiencia en The Fuentes, participé en proyectos clave que me permitieron desarrollar nuevas habilidades y aportar valor en áreas estratégicas. Aunque el ambiente era generalmente positivo, en ocasiones surgían tensiones e incluso envidias entre colegas.",
-                        img: "https://randomuser.me/api/portraits/men/22.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "medium",
                         highlight: true
                     },
@@ -834,7 +833,7 @@
                         nombre: "Pedro Emiliano Gómez",
                         titulo: "Auxiliar jurídico",
                         opinion: "En general, todo bien. Llevo apenas un mes y tanto he aprendido como he aportado. Espero seguir aprendiendo, creciendo y aportando a mediano y largo plazo.",
-                        img: "https://randomuser.me/api/portraits/women/39.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "large"
                     },
                     {
@@ -842,7 +841,7 @@
                         nombre: "Inmer Ernesto Moya",
                         titulo: "Gerente de Control de Calidad",
                         opinion: "Orgulloso de formar parte de la gran familia de la empresa y aportar mi granito de arena desde mi área formativa y aplicada, de tal forma que los proyectos ejecutados cumplan con la calidad deseada y contratada. La idea es seguir en la empresa muchos años más, continuar construyendo obras a lo largo de todo México, que la empresa sea reconocida a nivel nacional y se vuelva un referente. ",
-                        img: "https://randomuser.me/api/portraits/men/53.jpg",
+                        img: "Imagenes/icons/perfil1.png",
                         size: "small",
                         highlight: true
                     },
@@ -851,7 +850,7 @@
                         nombre: "Alondra Vázquez Gómez",
                         titulo: "Auxiliar de Calidad",
                         opinion: "Agradezco que me dieran la oportunidad de trabajar en esta empresa donde veo que sí se preocupan por sus trabajadores y valoran el esfuerzo que se hace para sacar adelante el trabajo. Me gusta lo que hago y espero seguir aportando y creciendo junto con esta empresa. Con los ingenieros, mis jefes inmediatos, no tengo ninguna queja; siempre me han ayudado y aportan conocimientos nuevos cada día.",
-                        img: "https://randomuser.me/api/portraits/men/65.jpg",
+                        img: "Imagenes/icons/perfil2.png",
                         size: "small"
                     },
                 ];
@@ -1057,21 +1056,12 @@
                 <h4>direccion@thefuentescorp.com.mx</h4>
             </div>
             <ul class="nav justify-content-center border-bottom container-icons">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                    class="bi bi-instagram" viewBox="0 0 16 16">
-                    <path
-                        d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                    class="bi bi-facebook" viewBox="0 0 16 16">
-                    <path
-                        d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
-                </svg>
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                    class="bi bi-whatsapp" viewBox="0 0 16 16">
-                    <path
-                        d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232" />
-                </svg>
+                
+                <a href="https://wa.me/521XXXXXXXXXX?text=Hola,%20tengo%20una%20consulta%20sobre%20${category.nombre}" 
+            target="_blank" 
+            style="display:inline-block;padding:10px 20px;background:#25D366;color:white;border-radius:20px;text-decoration:none;font-weight:bold;">
+            WhatsApp
+            </a>
             </ul>
             <p>&copy; 2025 The Fuentes Corporation</p>
         </footer>
